test/equality/negative/wrong_order.mli
type 'a t

val f : 'a t -> 'a t -> ('a -> 'a -> bool) -> bool
(*@ equality *)
